# SOL-1-advisor-token-fix

./: README.md  eval_modal_attn_bwd.py  eval_modal_trimul.py  plot_comparison.py  pyproject.toml  run_agent.sh
attn_bwd/: advisor_prompt.md  agent.py  plot_comparison_2mentor.py  plot_comparison_2worker.py  results.json  run_eval.py  tools.py  worker_prompt.md
attn_bwd/runs/20260629_181223_attn_bwd_starting_point/: advisor_history.json  experiment_history.md  proposals.md  results.tsv  snapshot_iter2.py  snapshot_iter3.py  snapshot_iter4.py  snapshot_iter5.py  token_usage.json  worker_history.json
attn_bwd/runs/20260629_183041_attn_bwd_starting_point/: advisor_history.json  experiment_history.md  proposals.md  results.tsv  snapshot_iter2.py  snapshot_iter3.py  snapshot_iter4.py  snapshot_iter5.py  snapshot_iter7.py  snapshot_iter8.py  token_usage.json  worker_history.json
attn_bwd/runs/20260629_190820_attn_bwd_starting_point/: advisor_history.json  experiment_history.md  proposals.md  results.tsv  snapshot_iter10.py  snapshot_iter11.py  snapshot_iter2.py  snapshot_iter4.py  snapshot_iter5.py  snapshot_iter6.py  snapshot_iter9.py  token_usage.json  worker_history.json
attn_bwd/runs/20260629_202041_attn_bwd_0619_best/: advisor_history.json  experiment_history.md  proposals.md  results.tsv  snapshot_iter10.py  snapshot_iter11.py  snapshot_iter14.py  snapshot_iter15.py  snapshot_iter16.py  snapshot_iter18.py  snapshot_iter20.py  snapshot_iter22.py  snapshot_iter24.py  snapshot_iter25.py  (+8 more)
trimul/: advisor_prompt.md  agent.py  results.json  tools.py  worker_prompt.md
(+129 files in other folders)
